sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:16: error: illegal start of simple expression
      while (i>0) ){
                  ^